feat: F2 listDocuments() — query ES for real document metadata, dedup by title